Buttons no longer have double border

--- a/oliver/flask/style.css
+++ b/oliver/flask/style.css
@@ -18,7 +18,7 @@ a {
 }
 .button {
 	background-color: blue;
-	border-style: outset double;
+	border-style: outset;
 	padding: 3px 8px 3px 8px;
 	border-radius: 10px;
 }
@@ -37,5 +37,5 @@ h1 {
 }
 h3 {
 	font-family: courier new;
-	
+
 }
